--- a/2015/client/css/styles.css
+++ b/2015/client/css/styles.css
@@ -1,55 +1,210 @@
-/*!
- *  NREL top navigation styles
+/*
+
+colors
+f79618 orange
+143e68 dark blue
+1b5fa6 lite blue
+5b5b5b lite grey
  */
-/**** banner stuff ***/
-.siteheader-wrapper {
+
+/*!
+ *  TYPOGRAPHY
+ ************************************************************/
+
+body {
+    color: #333;
+    font-family: "Droid Serif";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.65;
+    padding: 0;
+}
+
+/*
+ *  Headlines
+ */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.headline,
+.header,
+.media-heading,
+.panel-heading {
+    font-family: 'Lato', sans-serif;
+}
+
+h1 {
+    color: #1b5fa6;
+    font-weight: 300;
+    font-size: 30px;
+    margin-top: 0;
+    text-transform: uppercase;
+}
+
+h2 {
+    color: #1b5fa6;
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+h3 {
+    font-weight: 400;
+}
+
+h4 {
+    font-size: 1.3em;
+    color: #0079C2;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-bottom: 4px;
+}
+
+.lead {
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+}
+
+.intro {
+    color: #000;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    margin: 1em 0 2em 0;
+}
+
+.disclaimer {
+    font-size: 85%;
+    margin-top:4em;
+}
+.more {
+    font-family: 'Lato', sans-serif;
+}
+
+
+h2 > a,
+h2 > a:visited  {
+    color:#e07700;
+}
+
+.primary-darkblue-text {
+    color: #143e68;
+}
+
+.primary-liteblue-text {
+    color: #1b5fa6;
+}
+
+.primary-orange-text {
+    color: #f79618;
+}
+
+/*!
+ *  BANNER
+ ************************************************************/
+.logo-wrapper .pull-left,
+.logo-wrapper .pull-right  {
+    float: none;
+}
+@media(min-width:480px) {
+    .logo-wrapper .pull-left {
+        float: left;
+
+    }
+    .logo-wrapper .pull-right  {
+        float: right;
+    }
+}
+
+.event-header-wrapper {
     background-color: #143e68;
-    border-top: 9px solid #f79618;
+    border-top: 4px solid #f79618;
     color: #fff;
     text-transform: uppercase;
 }
 
-/*
- *  GLOBAL TOP NAV
- ************************************************************/
+.event-banner {
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    padding: 10px;
+}
+.event-banner:after,
+.event-banner:before {
+    display: table;
+    content: " ";
+}
 
-/*
-<div .navbar-wrapper-global
-    <nav .navbar
-        <div .container
-            <ul .nav .navbar-nav
-                <li .dropdown
-*/
+@media(min-width: 768px) {
+    .event-banner {
+        height: 76px;
+        padding: 0;
+    }
+}
 
+.event-banner .event-name {
+    font-size: 26px;
+    line-height: 1;
+    text-align: center;
+}
+
+@media(min-width: 480px) {
+    .event-banner .event-name {
+        font-size: 37px;
+        text-align: left;
+    }
+}
+
+@media(min-width: 768px) {
+    .event-banner .event-name {
+        line-height: 76px;
+    }
+}
+
+.event-banner .event-location {
+    font-size: 18px;
+    line-height: 20px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+@media(min-width: 768px) {
+    .event-banner .event-location {
+        text-align: right;
+    }
+}
 
 /*!
- *  NREL top navigation styles
- */
-
-
-/*
- *  TOP NAV
+ *  ALL TOP NAV
  ************************************************************/
-
-/*
-<div .navbar-wrapper [navbar-global]>
-    <div .navbar >
-        <ul .navbar-nav .nav>
-            <li .dropdown>
-                <ul .dropdown-menu>
-                    <li>
-*/
-
-
-/*
- *  All top nav
- */
-
-
 .navbar-nav {
+    font-family: 'Lato', sans-serif;
     margin-bottom: 0; /* override */
     margin-top: 0; /* override */
     text-transform: uppercase;
+}
+
+.navbar-nav a {
+    text-decoration: none;
+}
+
+.dropdown-menu {
+    border-radius: 0;
+    padding-bottom: 0;
+    padding-top: 0;
+}
+
+/* second level nav */
+.dropdown-menu > li > a {
+    padding: 10px 20px; /* override */
+}
+
+/* flip the arrow updaide down */
+.navbar-nav > li.open > a .caret {
+    transform: rotate(180deg);
 }
 
 /*!
@@ -62,17 +217,33 @@
     text-align: center; /* center top level items */
 }
 
-.navbar-global a {
+.navbar-global a,
+.navbar-global a:visited {
     color: #143e68;
 }
 
-
-
+/* home icon */
+.navbar-global .dropdown-menu > li > a .fa-home {
+    position: absolute;
+    right: 15px;
+    top: 8px;
+}
+@media (min-width: 480px) {
+    .navbar-global .dropdown-menu > li > a .fa-home {
+        right: 10px;
+        top: 13px;
+    }
+}
 /* squeeze to fix mobile */
 .navbar-global .container {
-    font-size: 12px;
+    font-size: 10px;
     padding-left: 0;
     padding-right: 0;
+}
+@media (min-width: 480px) {
+    .navbar-global .container {
+        font-size: 12px
+    }
 }
 
 @media (min-width:768px) {
@@ -98,8 +269,9 @@
 }
 
 .navbar-global .navbar {
-    min-height: 0; /* override */
+    border: 0;
     margin-bottom: 0; /* override */
+    min-height: 0; /* override */
 }
 
 .navbar-global  .navbar-nav {
@@ -118,25 +290,19 @@
 }
 @media(min-width: 992px) {
     .navbar-global  .navbar-nav > li > a {
-
-
     }
 }
 
 .navbar-global  .navbar-nav > li > a {
-
 }
 
 .navbar-global  .navbar-nav > li > a:hover,
 .navbar-global  .navbar-nav > li > a:focus {
-
 }
 
 /* active (on) state */
 .navbar-global  .navbar-nav > li.active > a,
 .navbar-global  .navbar-nav > li.active > a:hover  {
-
-
 }
 
 .navbar-global  .navbar-nav > li.open > a {
@@ -150,6 +316,16 @@
 /*
  *  2ND LEVEL
  */
+.navbar-global .dropdown-menu > li > a {
+    border-bottom: 1px solid #fff;
+    color: #fff;
+}
+
+.navbar-global .dropdown-menu > li:last-child > a {
+    border-bottom: none;
+}
+
+
 .navbar-global  .navbar-nav .open .dropdown-menu {
     background-color: #efefef;
 }
@@ -163,11 +339,10 @@
     display: block !important;
 }
 
+
 @media(min-width:768px) {
     /* 2nd level desktop */
     .navbar-global  .navbar-nav .open .dropdown-menu > li > a {
-
-
     }
 }
 
@@ -181,7 +356,6 @@
 
 @media (min-width:768px) {
     .navbar-global  .navbar-nav > li > a {
-
     }
 }
 
@@ -200,10 +374,8 @@
 @media (min-width:768px) {
     .navbar-global  .navbar-nav .open .dropdown-menu {
         display:block;
-        left:auto;
-        padding-bottom: 0; /* override */
-        padding-top: 0; /* override */
-        width:auto;
+        left: auto;
+        width: auto;
     }
 }
 
@@ -215,11 +387,27 @@
  *****************************************************************************************************************/
 
 .navbar-event {
-    background-color: #004990;
+    background-color: #1b5fa6;
+}
+@media(min-width:768px) {
+    .navbar-event {
+        font-size: 12px;
+    }
+}
+@media(min-width:992px) {
+    .navbar-event {
+        font-size: 14px;
+    }
+}
+.navbar-event a,
+.navbar-event a:visited {
+    color: #fff;
 }
 
-.navbar-event a {
-    color: #fff;
+/* home icon */
+.navbar-event .dropdown-menu > li > a .fa-home {
+    float: right;
+    margin-top: 3px;
 }
 
 .navbar-event .navbar-header {
@@ -228,8 +416,9 @@
 }
 
 .navbar-event .navbar {
-    min-height: 0; /* override */
+    border: 0;
     margin-bottom: 0; /* override */
+    min-height: 0; /* override */
 }
 
 .navbar-event .navbar-toggle {
@@ -237,17 +426,36 @@
     margin: 0 0 0 15px; /* override */
     text-transform: uppercase;
 }
+
 .navbar-event .navbar-toggle .icon-bar-wrapper {
     display: inline-block;
 }
+
 .navbar-event .navbar-toggle .icon-bar {
     background-color: #FFF;
 }
+
 .navbar-event .navbar-toggle-label {
     display: inline-block;
     line-height: 14px;
+    margin-top: 2px;
     vertical-align: text-top;
 }
+
+.navbar-event .nav > li > a {
+    border-bottom: 1px solid #fff;
+}
+
+@media(min-width:768px) {
+    .navbar-event .nav > li > a {
+        border-bottom: 0;
+    }
+}
+
+.navbar-event .nav > li:last-child > a {
+    border-bottom: 0;
+}
+
 .navbar-event .nav > li > a:focus,
 .navbar-event .nav > li > a:hover {
     background-color: #143E68;
@@ -256,26 +464,186 @@
 
 .navbar-event .navbar-nav .open .dropdown-menu {
     background-color: #000000;
-    padding-bottom: 0; /* override */
-    padding-top: 0; /* override */
 }
+
 .navbar-event .dropdown-menu > li > a {
+    border-bottom: 1px solid #fff;
     color: #fff;
 }
+
+.navbar-event .dropdown-menu > li:last-child > a {
+    border-bottom: none;
+}
+
 .navbar-event .dropdown-menu > li > a:focus,
 .navbar-event .dropdown-menu > li > a:hover {
     background-color: #143E68;
 }
 
-
-/*!
- *  HP Carousel
- */
 /*
- * CAROUSEL
+.nav .open>a, .nav .open>a:focus, .nav .open>a:hover
  */
-#carousel {
-    margin-top: 0;
+
+/*
+ *  BREADCRUMBS
+ *********************************************/
+.breadcrumb {
+    background-color: transparent;
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    margin-bottom: 1em;
+    padding-left:0;
+}
+
+
+.breadcrumb > li + li:before {
+    content: "\00BB";
+    padding: 0 5px;
+    color: #000;
+}
+
+.breadcrumb a,
+.breadcrumb a:visited {
+    color: #143e68;
+    text-decoration: none;
+
+}
+/*
+ *  SIDE NAV
+ *********************************************/
+
+
+.sidenav {
+    margin-top: 0.6em;
+}
+
+.sidenav ul.nav li {
+    /*display: list-item;*/
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    line-height: 1.3;
+}
+
+.sidenav a,
+.sidenav a:visited {
+    color:#1b5fa6;
+    text-decoration: none;
+}
+.nav>li>a:hover,
+.nav>li>a:focus {
+    background-color: transparent; /* override */
+}
+/*
+ *  First level nav
+ ***********************/
+.sidenav > ul.nav > li:first-child > a {
+    border-top: 3px solid #D1D5D8;
+}
+
+.sidenav > ul.nav > li > a {
+    background-color: transparent;
+    border-bottom:1px solid #d1d5d8;
+    border-top: 0;
+    text-transform: uppercase;
+}
+
+/* HOVER / ON */
+.sidenav > ul.nav > li > a:hover,
+.sidenav > ul.nav > li > a:focus,
+.sidenav > ul.nav > li.active > a,
+.sidenav > ul.nav > li.active > a:visited {
+    background-color: #1b5fa6;
+    color: #fff;
+}
+
+
+
+
+/*
+ *  Second level nav
+ ***********************/
+
+.sidenav > ul.nav ul.nav li > a {
+    border-bottom: 1px dashed #d1d5d8;
+    padding-left: 30px;
+    text-transform: none;
+}
+
+.sidenav > ul.nav ul.nav li:last-child > a {
+    border-bottom: 1px solid #d1d5d8;
+}
+
+/* HOVER / ON */
+.sidenav > ul.nav ul.nav li > a:hover,
+.sidenav > ul.nav ul.nav li > a:focus,
+.sidenav > ul.nav ul.nav li.active > a,
+.sidenav > ul.nav ul.nav li.active > a:visited {
+    background-color: #E5F1F9;
+    color: #1b5fa6;
+}
+
+/*
+ *  Third level nav
+ ***********************/
+.sidenav ul.nav ul.nav ul.nav {
+
+}
+
+.sidenav ul.nav ul.nav ul.nav li {
+    color: #1b5fa6;
+    display: list-item;
+}
+
+.sidenav ul.nav ul.nav ul.nav li > a:before {
+    content: '\25A0  '; /* square bullet */
+    vertical-align: text-bottom;
+}
+
+.sidenav ul.nav ul.nav ul.nav li > a {
+    border-bottom: none;
+    /*display: list-item;*/
+    margin-left: 1em;
+    text-indent: -0.85em;
+}
+
+.sidenav ul.nav ul.nav ul.nav li:last-child > a {
+    border-bottom: 1px dashed #d1d5d8;
+}
+
+/* HOVER / ON */
+.sidenav ul.nav ul.nav ul.nav li:hover,
+.sidenav ul.nav ul.nav ul.nav li:focus,
+.sidenav ul.nav ul.nav ul.nav li.active {
+    background-color: #E5F1F9;
+    color: #0064A2;
+}
+
+
+/*
+ *  IMAGERY
+ *********************************************/
+.image-hero {
+    margin: 0 -15px 24px -15px;
+}
+
+@media(min-width:480px){
+    .image-hero {
+        margin: 0 0 24px 0;
+    }
+}
+
+
+/*
+ *  CAROUSEL
+ *********************************************/
+#carousel { /* snug to edge on mobile */
+    margin: 0 -15px 24px -15px;
+}
+
+@media (min-width: 768px) {
+    #carousel {
+        margin: 0 0 12px 0;
+    }
 }
 
 #carousel .headline {
@@ -283,10 +651,6 @@
 }
 
 
-
-/*
- *  CAROUSEL
- *********************************************/
 .col-slides {
     padding-right: 0;
 }
@@ -294,10 +658,8 @@
     padding-left:0;
 }
 .col-thumbs .fogbox {
-    margin-bottom:11px;
 }
 .col-thumbs .fogbox:first-child {
-    margin-bottom:8px;
 }
 .col-thumbs  .carousel-indicators {
     margin-left:0;
@@ -307,7 +669,7 @@
 }
 
 .carousel-caption {
-    font-family:Roboto, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 /* Clearfix the caption b/c of the floats within */
@@ -353,18 +715,7 @@
 }
 
 
-#carousel { /* snug to edge on mobile */
-    margin-left: -15px;
-    margin-right: -15px;
-}
 
-@media (min-width: 768px) {
-    #carousel {
-        margin-left: 0px;
-        margin-right: 0px;
-        margin-top: 20px;
-    }
-}
 
 #carousel a,
 #carousel a:hover {
@@ -375,7 +726,7 @@
     background: #000;
     background-color: rgba(0, 0, 0, 0.8);
     box-sizing: border-box;
-    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
     padding:.5em 1em;
     text-align: left;
     left: 0;
@@ -452,10 +803,9 @@
 
 .fogbox > div { /* override col-* classes */
     box-sizing: border-box;
-    border: 2px solid #fff;
-    border-top: none;
-    margin:0;
-    padding:0;
+    border: 0;
+    margin: 0;
+    padding: 0;
     position: relative;
 }
 
@@ -507,13 +857,13 @@
     padding: 0 5px;
 }
 
-
 .carousel-controls .carousel-previous,
 .carousel-controls .carousel-next  {
     display: inline-block;
     background-color: #000;
     width:49%;
 }
+
 .carousel-controls .carousel-next {
     text-align: right;
 }
@@ -542,11 +892,281 @@
 }
 
 /*
+ * GENERIC PANEL STUFF
+ *********************************************/
+.panel-heading {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.panel-flat {
+    border-radius: 0;
+    border-color: #1b5fa6;
+}
+
+.panel-flat .panel-heading {
+    background-color: #1b5fa6;
+    border-color: #1b5fa6;
+    border-radius: 0;
+    color: #fff;
+}
+
+.panel-flat .panel-footer {
+    border-radius: 0;
+}
+
+.panel-secondary {
+    border-color: #ccc;
+}
+
+.panel-secondary .panel-heading {
+    background-color: #f79618;
+    color: #143E68;
+}
+
+.panel-secondary .panel-footer {
+    background-color: #143E68;
+    color:#fff;
+}
+/*
+ *  Block level elements wrapped in an <a> tag
+ *********************************************/
+a.link-block {
+    color: inherit;
+    display: block;
+    text-decoration: none;
+}
+
+a.link-block:hover {
+    text-decoration: none;
+}
+
+
+
+/*
+ *  Generic Media Block
+ *********************************************/
+
+.media-block {
+    margin-top: 2em;
+    margin-bottom: 1em;
+}
+
+.media-block:before,
+.media-block:after {
+    content: " ";
+    display: table;
+}
+
+.media-block:after {
+    clear: both;
+}
+
+/* horizontal media block */
+.media-block h2.header,
+.media-block h3.header,
+.media-block h4.header {
+    margin-top:0;
+}
+
+/* vertical media block */
+.media-block img + h2,
+.media-block img + h3,
+.media-block img + h4,
+.media-block img + .header {
+    margin-top:.5em;
+}
+
+/* read more, learn more, ..typically the critical action oriented links in a media block */
+.media-block .more {
+    font-family: 'Lato', sans-serif;
+}
+
+.media-block .more a {
+    text-decoration: none;
+
+}
+
+.media-block .more a:hover {
+    text-decoration: underline;
+
+}
+
+/*
+ * LINKS
+ *********************************************/
+a {
+  color: #143e68;
+  text-decoration: underline;
+}
+
+a:visited {
+  color: #f79618;
+}
+
+a:hover,
+a:active {
+  color: #f79618;
+  text-decoration: underline;
+}
+
+/*
+ * LATEST STUFF
+ *********************************************/
+.feed-container {
+    border-bottom:1px solid #143e68;
+    border-top:1px solid #143e68;
+    margin-bottom: 1em;
+    padding: .5em 0;
+}
+
+.feed-container .media-heading {
+    color: #1b5fa6;
+    font-size:16px;
+}
+
+.feed-container .date {
+    color: #5b5b5b;
+}
+
+.feed-container .media {
+    border-bottom:1px dotted #ccc;
+}
+
+.feed-container .media:last-child {
+    border-bottom: none;
+}
+
+/*
+ *  Form Elements
+ *********************************************/
+button,
+.btn {
+    font-family: 'Lato', sans-serif;
+}
+
+.btn-primary {
+    background-color: #1B5FA6;
+}
+/*
+ *  Tables
+ *********************************************/
+.scores-container {
+    max-height: 226px;
+    overflow: scroll;
+}
+
+.table-scores {
+    font-family: 'Lato', sans-serif;
+    font-size: 85%;
+}
+
+
+/*
+ * CALL OUTS?
+ *********************************************/
+.score-block {
+    background-color: #143e68;
+    margin: 0 -15px;
+    padding:1.5em 1em 1em 1em;
+    text-align: center;
+}
+@media(min-width:768px) {
+    .score-block {
+        margin: 0;
+    }
+}
+
+.score-block h2,
+.score-block h3,
+.score-block h4,
+.score-block .headline {
+    color: #fff;
+    font-size:1.1em;
+    margin-top: 0;
+}
+
+/*
+ * LISTS
+ *********************************************/
+ .nobullets {
+    margin-left: 0;
+    padding-left: 0;
+    list-style-type: none;
+ }
+
+ .nobullets > li {
+    margin-left: 0;
+    padding-left: 0;
+ }
+
+ .list-social {
+    list-style-type: none;
+    padding-left: 0;
+    text-align: center;
+ }
+
+ .list-social > li {
+    display: inline-block;
+    margin-left: 5px;
+ }
+/*
+ * SEARCH
+ *********************************************/
+.form-search {
+    margin-top: 20px;
+    margin-bottom: 5px;
+}
+
+/* search text input */
+.form-search input[type=text] {
+    display: inline-block;
+    font-size: 13px;
+    width: 70%;
+}
+
+/* search button */
+.form-search .btn {
+    text-transform: uppercase;
+    width: 28%;
+}
+
+@media(min-width:480px){
+    /* search text input */
+    .form-search input[type=text] {
+        width: auto;
+    }
+
+    /* search button */
+    .form-search .btn {
+        width: auto;
+    }
+}
+
+/*
+ * DIVIDERS
+ *********************************************/
+hr {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 0;
+    border-top: 2px solid #ccc;
+}
+
+/*
  * FOOTER
  *********************************************/
 footer {
-    background-color: #efefef;
+    background-color: #eeeeee;
+    font-family: 'Lato', sans-serif;
+    margin-top: 4em;
+    padding:2em 0;
     text-align: center;
+}
+
+footer .logo {
+    display: inline;
+    margin: 1em 0;
 }
 
 footer ul {
@@ -558,3 +1178,45 @@ footer ul {
 footer li {
     display: inline-block;
 }
+
+/*
+ * FLEX SLIDER
+ *********************************************/
+.flex-slider {
+    margin: 0 0 10px!important;
+}
+
+.flex-direction-nav {
+    line-height: 40px;
+}
+
+.flex-carousel li {
+    margin-right: 5px;
+    max-height: 76px !important;
+    overflow: hidden;
+}
+@media(min-width:480px){
+    .flex-carousel li {
+        max-height: 116px !important;
+    }
+}
+
+.flex-carousel.flexslider {
+    margin-bottom:0 !important;
+}
+
+.flex-carousel img {
+    display: block;
+    opacity: .5;
+    cursor: pointer;
+}
+
+.flex-carousel img:hover {
+    opacity: 1;
+}
+
+.flex-carousel .flex-active-slide img {
+    opacity: 1;
+    cursor: default;
+}
+
