Updates to html partials

--- a/client/template/global-banner-topnav.html
+++ b/client/template/global-banner-topnav.html
@@ -1,10 +1,12 @@
+
+<!-- == GLOBAL TOPNAV/BANNER == -->
 <a href="#content" class="sr-only">Skip to main content</a>
 
 <div class="logo-wrapper">
     <div class="container">
 
         <div class="pull-left">
-            <a href="/"><img src="/client/img/head_sd_logo.gif" class="img-responsive"></a>
+            <a href="/"><img src="/client/img/head-sd-logo.gif" class="img-responsive"></a>
         </div>
 
         <div class="pull-right">
@@ -28,56 +30,54 @@
 
 
 
-
-
-
 <!-- == TOP NAVIGATION == -->
-<div class="navbar-wrapper navbar-global" id="topnav">
+<div class="navbar-wrapper navbar-global topnav">
     <div class="navbar" role="navigation">
         <div class="container">
 
             <ul class="nav navbar-nav">
 
-                <li class="dropdown" data-topnav="about"><a href="#" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a>
-
+                <li data-topnav="about"
+                    class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="/about/">About <i class="fa fa-home"></i></a></li>
-                        <li><a href="/research/">Link</a></li>
-                        <li><a href="/research/">Link</a></li>
-
+                        <li><a href="#">About <i class="fa fa-home"></i></a></li>
+                        <li><a href="#">Apply</a></li>
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">Contacts</a></li>
                     </ul>
                 </li>
 
-                <li class="dropdown" data-topnav="research"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Education <span class="caret"></span></a>
+                <li data-topnav="education"><a href="#">Education</a></li>
+
+                <li data-topnav="history"
+                    class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">History <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="/research/">Education <i class="fa fa-home"></i></a></li>
-                        <li><a href="/research/">Link</a></li>
-                        <li><a href="/research/">Link</a></li>
+                        <li><a href="#">History <i class="fa fa-home"></i></a></li>
+                        <li><a href="#">Solar Decathlon 2015</a></li>
+                        <li><a href="#">Solar Decathlon 2013</a></li>
+                        <li><a href="#">Solar Decathlon 2011</a></li>
+                        <li><a href="#">Solar Decathlon 2009</a></li>
+                        <li><a href="#">Solar Decathlon 2007</a></li>
+                        <li><a href="#">Solar Decathlon 2005</a></li>
+                        <li><a href="#">Solar Decathlon 2002</a></li>
+                        <li><a href="#">Where Are the Houses Now?</a></li>
+                        <li><a href="#">House Tours</a></li>
                     </ul>
                 </li>
 
-                <li class="dropdown" data-topnav="workingwithus"><a href="#" class="dropdown-toggle" data-toggle="dropdown">History <span class="caret"></span></a>
+                <li data-topnav="international"
+                    class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">International <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="/workingwithus/">History <i class="fa fa-home"></i></a></li>
-                        <li><a href="/research/">Link</a></li>
-                        <li><a href="/research/">Link</a></li>
-
-                    </ul>
-                </li>
-
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">International <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="/careers/">International <i class="fa fa-home"></i></a></li>
-                        <li><a href="/research/">Link</a></li>
-                        <li><a href="/research/">Link</a></li>
-
+                        <li><a href="#">Solar Decathlon China</a></li>
+                        <li><a href="#">Solar Decathlon Europe</a></li>
+                        <li><a href="#">Solar Decathlon Latin America and Caribbean</a></li>
+                        <li><a href="#">Solar Decathlon Middle East</a></li>
                     </ul>
                 </li>
 
             </ul>
 
-      </div>
+        </div>
     </div>
 </div>
-<!-- == END TOP NAVIGATION == -->
-
+<!-- == END GLOBAL TOPNAV/BANNER == -->
