--- a/client/template/global-footer.html
+++ b/client/template/global-footer.html
@@ -1,11 +1,11 @@
 
-<!-- FOOTER -->
+<!-- == GLOBAL FOOTER == -->
 <footer id="footer" class="wrapper-footer">
 
     <div class="container">
         <div class="row">
             <div class="col-sm-2 col-sm-offset-5 col-xs-6 col-xs-offset-3">
-                <a href="http://www.energy.gov"><img src="/client/img/doe_logo.png" alt="U.S. Department of Energy" class="img-responsive logo"></a>
+                <a href="http://www.energy.gov"><img src="/client/img/doe-logo.png" alt="U.S. Department of Energy" class="img-responsive logo"></a>
             </div>
         </div>
 
@@ -24,7 +24,7 @@
 
         <div class="row">
             <div class="col-sm-2 col-sm-offset-5 col-xs-6 col-xs-offset-3">
-                <a href="http://www.nrel.gov"><img src="/client/img/nrel_logo.png" alt="NREL" class="img-responsive logo"></a>
+                <a href="http://www.nrel.gov"><img src="/client/img/nrel-logo.png" alt="NREL" class="img-responsive logo"></a>
             </div>
         </div>
 
@@ -35,4 +35,4 @@
         </div>
     </div>
 </footer>
-<!-- END FOOTER -->
+<!-- == END GLOBAL FOOTER == -->
