--- a/client/template/global-head.html
+++ b/client/template/global-head.html
@@ -1,11 +1,11 @@
     <!-- == GLOBAL HEAD == -->
 
     <!-- SEO -->
-    <meta name="keywords" content="solar decathlon solar decathalon" />
+    <meta name="keywords" content="solar decathlon solar decathalon" >
 
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" >
 
 
     <!-- Bootstrap -->
@@ -15,7 +15,7 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/flexslider.min.css" rel="stylesheet" >
 
     <!-- Site Styles -->
-    <link href="2015/client/css/styles.css" rel="stylesheet" >
+    <link href="/client/css/styles.css" rel="stylesheet" >
 
 
     <!-- Fonts -->
