--- a/client/template/global-scripts.html
+++ b/client/template/global-scripts.html
@@ -7,6 +7,9 @@
 <!-- Icons plugin -->
 <script src="/client/js/iconomatic/jquery.iconomatic.min.js"></script>
 
+<!-- Flickr plugin -->
+<script src="/client/js/jflickrrest/jquery.jflickrrest.js"></script>
+
 <!-- Slider/Carousel Plugin -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/jquery.flexslider.min.js"></script>
 
