final updates to template files before content

--- a/2015/client/template/2015-banner-topnav.html
+++ b/2015/client/template/2015-banner-topnav.html
@@ -61,11 +61,11 @@
                             aria-haspopup="true"
                             aria-expanded="false">Visit <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <!-- <li><a href="#">Visit <i class="fa fa-home"></i></a></li> -->
-                            <li><a href="#">Dates & Hours</a></li>
-                            <li><a href="#">Things To Do</a></li>
-                            <li><a href="#">Village Map</a></li>
-                            <li><a href="#">Directions & Transportation</a></li>
+                            <li><a href="/2015/visit.html">Visit <i class="fa fa-home"></i></a></li>
+                            <li><a href="/2015/visit-dates-hours.html">Dates &amp; Hours</a></li>
+                            <li><a href="/2015/visit-to-do.html">Things To Do</a></li>
+                            <li><a href="/2015/village-map.html">Village Map</a></li>
+                            <li><a href="/2015/visit-directions-transportation.html">Directions &amp; Transportation</a></li>
                         </ul>
                     </li>
 
@@ -78,13 +78,13 @@
                             aria-haspopup="true"
                             aria-expanded="false">Competition <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <!-- <li><a href="#">Competition <i class="fa fa-home"></i></a></li> -->
-                            <li><a href="#">Scores & Standings</a></li>
-                            <li><a href="/_template-landing.html">Teams</a></li>
-                            <li><a href="#">Contests</a></li>
-                            <li><a href="#">Village Energy Balance</a></li>
-                            <li><a href="#">Rules</a></li>
-                            <li><a href="#">Juries</a></li>
+                            <li><a href="/2015/competition.html">Competition <i class="fa fa-home"></i></a></li>
+                            <li><a href="/2015/scores.html">Scores &amp; Standings</a></li>
+                            <li><a href="/2015/teams.html">Teams</a></li>
+                            <li><a href="/2015/contest.html">Contests</a></li>
+                            <li><a href="/2015/village-energy-balance.html">Village Energy Balance</a></li>
+                            <li><a href="/2015/rules.html">Rules</a></li>
+                            <li><a href="/2015/juries.html">Juries</a></li>
                         </ul>
                     </li>
 
@@ -97,10 +97,11 @@
                             aria-haspopup="true"
                             aria-expanded="false">News <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">News Blog</a></li>
-                            <li><a href="#">Newsletter</a></li>
-                            <li><a href="#">In the News</a></li>
-                            <li><a href="#">Press Room</a></li>
+                            <li><a href="/2015/news.html">News <i class="fa fa-home"></i></a></li>
+                            <li><a href="/blog/">News Blog</a></li>
+                            <li><a href="/2015/news-newsletter.html">Newsletter</a></li>
+                            <li><a href="/2015/news-in-the-news.html">In the News</a></li>
+                            <li><a href="/2015/news-press-room.html">Press Room</a></li>
                         </ul>
                     </li>
 
@@ -113,6 +114,7 @@
                             aria-haspopup="true"
                             aria-expanded="false">Photos <span class="caret"></span></a>
                         <ul class="dropdown-menu">
+                            <li><a href="/2015/photos.html">Photos <i class="fa fa-home"></i></a></li>
                             <li><a href="#">Daily Photos</a></li>
                             <li><a href="#">Gallery of Houses</a></li>
                             <li><a href="#">Village Time-Lapse</a></li>
@@ -128,10 +130,12 @@
                             aria-haspopup="true"
                             aria-expanded="false">Videos <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Competition &amp; Event</a></li>
-                            <li><a href="#">Team-Produced Videos</a></li>
+                            <li><a href="/2015/videos.html">Videos <i class="fa fa-home"></i></a></li>
+                            <li><a href="/2015/videos-competition.html">Competition &amp; Event</a></li>
+                            <li><a href="/2015/videos-team.html">Team-Produced Videos</a></li>
                         </ul>
                     </li>
+
 
                     <li data-topnav="sponsors"
                         class="dropdown">
@@ -142,10 +146,13 @@
                             aria-haspopup="true"
                             aria-expanded="false">Sponsors <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Sustaining</a></li>
-                            <li><a href="#">Supporting</a></li>
-                            <li><a href="#">Contributing</a></li>
-                            <li><a href="#">Resource</a></li>
+                            <li><a href="/2015/sponsors.html">Sponsors <i class="fa fa-home"></i></a></li>
+                            <li><a href="/2015/sponsors-edison.html">Edison International</a></li>
+                            <li><a href="/2015/sponsors-schneider-electric.html">Schneider Electric</a></li>
+                            <li><a href="/2015/sponsors-wells-fargo.html">Wells Fargo</a></li>
+                            <li><a href="/2015/sponsors-supporting.html">Supporting</a></li>
+                            <li><a href="/2015/sponsors-resource.html">Contributing</a></li>
+                            <li><a href="/2015/sponsors-contributing.html">Resource</a></li>
                         </ul>
                     </li>
 
@@ -158,9 +165,10 @@
                             aria-haspopup="true"
                             aria-expanded="false">Volunteers <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Roles</a></li>
-                            <li><a href="#">Forms</a></li>
-                            <li><a href="#">Training</a></li>
+                            <li><a href="/2015/volunteers.html">Volunteers <i class="fa fa-home"></i></a></li>
+                            <li><a href="/2015/volunteers-roles.html">Roles</a></li>
+                            <li><a href="/2015/volunteers-forms.html">Forms</a></li>
+                            <li><a href="/2015/volunteers-training.html">Training</a></li>
                         </ul>
                     </li>
 
