--- a/client/template/global-banner-topnav.html
+++ b/client/template/global-banner-topnav.html
@@ -29,7 +29,6 @@
 </div>
 
 
-
 <!-- == TOP NAVIGATION == -->
 <div class="navbar-wrapper navbar-global topnav">
     <div class="navbar" role="navigation">
@@ -40,38 +39,40 @@
                 <li data-topnav="about"
                     class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">About <i class="fa fa-home"></i></a></li>
-                        <li><a href="#">Apply</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Contacts</a></li>
+                        <li><a href="/about.html">About <i class="fa fa-home"></i></a></li>
+                        <li><a href="/about-apply.html">Apply</a></li>
+                        <li><a href="/about-faqs.html">FAQs</a></li>
+                        <li><a href="/about-contacts.html">Contacts</a></li>
                     </ul>
                 </li>
 
-                <li data-topnav="education"><a href="#">Education</a></li>
+
+                <li data-topnav="education"><a href="/education.html">Education</a></li>
 
                 <li data-topnav="history"
                     class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">History <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">History <i class="fa fa-home"></i></a></li>
-                        <li><a href="#">Solar Decathlon 2015</a></li>
-                        <li><a href="#">Solar Decathlon 2013</a></li>
-                        <li><a href="#">Solar Decathlon 2011</a></li>
-                        <li><a href="#">Solar Decathlon 2009</a></li>
-                        <li><a href="#">Solar Decathlon 2007</a></li>
-                        <li><a href="#">Solar Decathlon 2005</a></li>
-                        <li><a href="#">Solar Decathlon 2002</a></li>
-                        <li><a href="#">Where Are the Houses Now?</a></li>
-                        <li><a href="#">House Tours</a></li>
+                        <li><a href="/past.html">History <i class="fa fa-home"></i></a></li>
+                        <li><a href="/past/2015/">Solar Decathlon 2015</a></li>
+                        <li><a href="/past/2013/">Solar Decathlon 2013</a></li>
+                        <li><a href="/past/2011/">Solar Decathlon 2011</a></li>
+                        <li><a href="/past/2009/">Solar Decathlon 2009</a></li>
+                        <li><a href="/past/2007/">Solar Decathlon 2007</a></li>
+                        <li><a href="/past/2005/">Solar Decathlon 2005</a></li>
+                        <li><a href="/past/2002/">Solar Decathlon 2002</a></li>
+                        <li><a href="/wathn.html">Where Are the Houses Now?</a></li>
+                        <li><a href="/house-tours.html">House Tours</a></li>
                     </ul>
                 </li>
 
                 <li data-topnav="international"
                     class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">International <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Solar Decathlon China</a></li>
-                        <li><a href="#">Solar Decathlon Europe</a></li>
-                        <li><a href="#">Solar Decathlon Latin America and Caribbean</a></li>
-                        <li><a href="#">Solar Decathlon Middle East</a></li>
+                        <li><a href="/international.html">International <i class="fa fa-home"></i></a></li>
+                        <li><a href="/international-china.html">Solar Decathlon China</a></li>
+                        <li><a href="/international-europe.html">Solar Decathlon Europe</a></li>
+                        <li><a href="/international-latin-america.html">Solar Decathlon Latin America and Caribbean</a></li>
+                        <li><a href="/international-middle-east.html">Solar Decathlon Middle East</a></li>
                     </ul>
                 </li>
 
