--- a/client/template/global-leftnav.html
+++ b/client/template/global-leftnav.html
@@ -6,29 +6,31 @@
         <ul class="nav hide">
             <li><a href="/_template-global-page.html">About</a>
                 <ul class="nav hide">
-                <li><a href="#">About Link 1</a></li>
-                <li><a href="#">About Link 2</a></li>
-                <li><a href="#">About Link 3</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Apply</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Contacts</a></li>
                 </ul>
             </li>
         </ul>
 
         <ul class="nav hide">
-            <li><a href="#">Education</a>
-                <ul class="nav hide">
-                <li><a href="#">Education Link 1</a></li>
-                <li><a href="#">Education Link 2</a></li>
-                <li><a href="#">Education Link 3</a></li>
-                </ul>
-            </li>
+            <li><a href="#">Education</a></li>
         </ul>
 
         <ul class="nav hide">
             <li><a href="#">History</a>
                 <ul class="nav hide">
-                <li><a href="#">History Link 1</a></li>
-                <li><a href="#">History Link 2</a></li>
-                <li><a href="#">History Link 3</a></li>
+                <li><a href="#">History</a></li>
+                <li><a href="#">Solar Decathlon 2015</a></li>
+                <li><a href="#">Solar Decathlon 2013</a></li>
+                <li><a href="#">Solar Decathlon 2011</a></li>
+                <li><a href="#">Solar Decathlon 2009</a></li>
+                <li><a href="#">Solar Decathlon 2007</a></li>
+                <li><a href="#">Solar Decathlon 2005</a></li>
+                <li><a href="#">Solar Decathlon 2002</a></li>
+                <li><a href="#">Where Are the Houses Now?</a></li>
+                <li><a href="#">House Tours</a></li>
                 </ul>
             </li>
         </ul>
@@ -36,9 +38,11 @@
         <ul class="nav hide">
             <li><a href="#">International</a>
                 <ul class="nav hide">
-                <li><a href="#">International Link 1</a></li>
-                <li><a href="#">International Link 2</a></li>
-                <li><a href="#">International Link 3</a></li>
+                <li><a href="#">International</a></li>
+                <li><a href="#">Solar Decathlon China</a></li>
+                <li><a href="#">Solar Decathlon Europe</a></li>
+                <li><a href="#">Solar Decathlon Latin America and Caribbean</a></li>
+                <li><a href="#">Solar Decathlon Middle East</a></li>
                 </ul>
             </li>
         </ul>
