--- a/client/template/global-scripts.html
+++ b/client/template/global-scripts.html
@@ -10,6 +10,9 @@
 <!-- Flickr plugin -->
 <script src="/client/js/jflickrrest/jquery.jflickrrest.js"></script>
 
+<!-- RSS script -->
+<script src="/client/js/rss/jquery.rss.min.js"></script>
+
 <!-- Slider/Carousel Plugin -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/jquery.flexslider.min.js"></script>
 
