--- a/2015/client/template/2015-leftnav.html
+++ b/2015/client/template/2015-leftnav.html
@@ -5,12 +5,11 @@
 
         <!-- VISIT -->
         <ul class="nav hide">
-            <li><a href="#">Dates &amp; Hours</a></li>
-            <li><a href="#">Things To Do</a></li>
-            <li><a href="#">Village Map</a></li>
-            <li><a href="#">Directions &amp; Transportation</a></li>
+            <li><a href="/2015/visit-dates-hours.html">Dates &amp; Hours</a></li>
+            <li><a href="/2015/visit-to-do.html">Things To Do</a></li>
+            <li><a href="/2015/village-map.html">Village Map</a></li>
+            <li><a href="/2015/visit-directions-transportation.html">Directions &amp; Transportation</a></li>
         </ul>
-
 
         <!-- COMPETITION -->
         <ul class="nav hide">
@@ -24,55 +23,56 @@
                 </ul>
             </li>
 
-            <li><a href="/teams.html">Teams</a>
+            <li><a href="/2015/competition-teams.html">Teams</a>
                 <ul class="nav hide">
-                <li><a href="#">Team Contacts</a></li>
-                <li><a href="/_template-team.html">Cal Poly</a></li>
-                <li><a href="#">Clemson</a></li>
-                <li><a href="#">Crowder/Drury</a></li>
-                <li><a href="#">Florida/Singapore</a></li>
-                <li><a href="#">Mass/Central America</a></li>
-                <li><a href="#">Missouri S&amp;T</a></li>
-                <li><a href="#">NY City Tech</a></li>
-                <li><a href="#">Sacramento State</a></li>
-                <li><a href="#">Stevens</a></li>
-                <li><a href="#">Team NY Alfred</a></li>
-                <li><a href="#">Team Orange County</a></li>
-                <li><a href="#">Team Tennessee</a></li>
-                <li><a href="#">Texas/Germany</a></li>
-                <li><a href="#">U at Buffalo</a></li>
-                <li><a href="#">UC Davis</a></li>
-                <li><a href="#">West Virginia/Rome</a></li>
-                <li><a href="#">Yale</a></li>
+                <li><a href="/2015/competition-teams-contacts.html">Team Contacts</a></li>
+                <li><a href="/2015/competition-team-cal-poly.html">Cal Poly</a></li>
+                <li><a href="/2015/competition-team-clemson.html">Clemson</a></li>
+                <li><a href="/2015/competition-team-crowder-drury.html">Crowder/Drury</a></li>
+                <li><a href="/2015/competition-team-florida-singapore.html">Florida/Singapore</a></li>
+                <li><a href="/2015/competition-team-mass-central-america.html">Mass/Central America</a></li>
+                <li><a href="/2015/competition-team-missouri-st.html">Missouri S&amp;T</a></li>
+                <li><a href="/2015/competition-team-ny-alfred.html">NY City Tech</a></li>
+                <li><a href="/2015/competition-team-ny-city-tech.html">Sacramento State</a></li>
+                <li><a href="/2015/competition-team-orange-county.html">Stevens</a></li>
+                <li><a href="/2015/competition-team-sacramento-state.html">Team NY Alfred</a></li>
+                <li><a href="/2015/competition-team-stevens.html">Team Orange County</a></li>
+                <li><a href="/2015/competition-team-tennessee.html">Team Tennessee</a></li>
+                <li><a href="/2015/competition-team-texas-germany.html">Texas/Germany</a></li>
+                <li><a href="/2015/competition-team-u-at-buffalo.html">U at Buffalo</a></li>
+                <li><a href="/2015/competition-team-uc-davis.html">UC Davis</a></li>
+                <li><a href="/2015/competition-team-west-virginia-rome.html">West Virginia/Rome</a></li>
+                <li><a href="/2015/competition-team-yale.html">Yale</a></li>
                 </ul>
             </li>
 
-            <li><a href="#">Contests</a>
+            <li><a href="/2015/competition-contests.html">Contests</a>
                 <ul class="nav hide">
-                <li><a href="#">Architecture</a></li>
-                <li><a href="#">Market Appeal</a></li>
-                <li><a href="#">Engineering</a></li>
-                <li><a href="#">Communications</a></li>
-                <li><a href="#">Affordability</a></li>
-                <li><a href="#">Comfort Zone</a></li>
-                <li><a href="#">Appliances</a></li>
-                <li><a href="#">Home Life</a></li>
-                <li><a href="#">Commuting</a></li>
-                <li><a href="#">Energy Balance</a></li>
+                <li><a href="/2015/competition-contests-architecture.html">Architecture</a></li>
+                <li><a href="/2015/competition-contests-market-appeal.html">Market Appeal</a></li>
+                <li><a href="/2015/competition-contests-engineering.html">Engineering</a></li>
+                <li><a href="/2015/competition-contests-communications.html">Communications</a></li>
+                <li><a href="/2015/competition-contests-affordability.html">Affordability</a></li>
+                <li><a href="/2015/competition-contests-comfort-zone.html">Comfort Zone</a></li>
+                <li><a href="/2015/competition-contests-appliances.html">Appliances</a></li>
+                <li><a href="/2015/competition-contests-home-life.html">Home Life</a></li>
+                <li><a href="/2015/competition-contests-commuting.html">Commuting</a></li>
+                <li><a href="/2015/competition-contests-energy-balance.html">Energy Balance</a></li>
                 </ul>
             </li>
 
-            <li><a href="#">Village Energy Balance</a></li>
-            <li><a href="#">Rules</a></li>
-            <li><a href="#">Juries</a></li>
+            <li><a href="/2015/village-energy-balance.html">Village Energy Balance</a></li>
+            <li><a href="/2015/competition-rules.html">Rules</a></li>
+            <li><a href="/2015/competition-juries.html">Juries</a></li>
         </ul>
+
 
         <!-- NEWS -->
         <ul class="nav hide">
-            <li><a href="#">News Blog</a></li>
-            <li><a href="#">Newsletter</a></li>
-            <li><a href="#">In the News</a></li>
-            <li><a href="#">Press Room</a></li>
+            <li><a href="/blog/">News Blog</a></li>
+            <li><a href="/2015/news-newsletter.html">Newsletter</a></li>
+            <li><a href="/2015/news-in-the-news.html">In the News</a></li>
+            <li><a href="/2015/news-press-room.html">Press Room</a></li>
         </ul>
 
         <!-- PHOTOS -->
@@ -84,23 +84,26 @@
 
         <!-- VIDEOS -->
         <ul class="nav hide">
-            <li><a href="#">Competition &amp; Event</a></li>
-            <li><a href="#">Team-Produced Videos</a></li>
+            <li><a href="/2015/videos-competition.html">Competition &amp; Event</a></li>
+            <li><a href="/2015/videos-team.html">Team-Produced Videos</a></li>
         </ul>
+
 
         <!-- SPONSORS -->
         <ul class="nav hide">
-            <li><a href="#">Sustaining</a></li>
-            <li><a href="#">Supporting</a></li>
-            <li><a href="#">Contributing</a></li>
-            <li><a href="#">Resource</a></li>
+            <li><a href="/2015/sponsors-edison.html">Edison International</a></li>
+            <li><a href="/2015/sponsors-schneider-electric.html">Schneider Electric</a></li>
+            <li><a href="/2015/sponsors-wells-fargo.html">Wells Fargo</a></li>
+            <li><a href="/2015/sponsors-supporting.html">Supporting</a></li>
+            <li><a href="/2015/sponsors-resource.html">Contributing</a></li>
+            <li><a href="/2015/sponsors-contributing.html">Resource</a></li>
         </ul>
 
         <!-- VOLUNTEERS -->
         <ul class="nav hide">
-            <li><a href="#">Roles</a></li>
-            <li><a href="#">Forms</a></li>
-            <li><a href="#">Training</a></li>
+            <li><a href="/2015/volunteers-roles.html">Roles</a></li>
+            <li><a href="/2015/volunteers-forms.html">Forms</a></li>
+            <li><a href="/2015/volunteers-training.html">Training</a></li>
         </ul>
 
     </nav>
