--- a/client/template/hp-carousel-wide.html
+++ b/client/template/hp-carousel-wide.html
@@ -8,38 +8,38 @@
     <div class="col-sm-9 col-slides">
         <div class="carousel-inner">
             <div class="item active">
-                <a href="#">
+                <a href="/2015/competition-teams.html">
                     <img
-                        src="http://placehold.it/862x330"
+                        src="assets/images/feature-teams.jpg"
                         class="img-responsive"
-                        alt="">
+                        alt="Photo of a large group of students cheering beneath a hot air balloon and holding a sign that says U.S. Department of Energy Solar Decathlon.">
                     <div class="carousel-caption clearfix">
-                        <p class="headline">___TITLE___</p>
-                        <p class="subhead">___TEASER___ <i class="fa fa-caret-right"></i></p>
+                        <!-- <p class="headline">___TITLE___</p> -->
+                        <p class="subhead">Meet the teams who will compete in the U.S. Department of Energy Solar Decathlon 2015! <i class="fa fa-caret-right"></i></p>
                     </div>
                 </a>
             </div>
             <div class="item">
-                <a href="#">
+                <a href="/2015/visit.html">
                     <img
-                        src="//placehold.it/862x330/ff0000/00ff00"
+                        src="assets/images/feature-sunrise.jpg"
                         class="img-responsive"
-                        alt="">
+                        alt="Photo of students in construction gear walking under a rising sun.">
                     <div class="carousel-caption">
-                        <p class="headline">___TITLE___</p>
-                        <p class="subhead">___TEASER___ <i class="fa fa-caret-right"></i></p>
+                        <!-- <p class="headline">___TITLE___</p> -->
+                        <p class="subhead">Attend the U.S. Department of Energy Solar Decathlon Oct. 8–11 and 15–18, 2015. <i class="fa fa-caret-right"></i></p>
                     </div>
                 </a>
             </div>
             <div class="item">
-                <a href="#">
+                <a href="/2015/volunteers.html">
                     <img
-                        src="//placehold.it/862x330"
+                        src="assets/images/feature-volunteer.jpg"
                         class="img-responsive"
-                        alt="">
+                        alt="Photo of students celebrating.">
                     <div class="carousel-caption">
-                        <p class="headline">___TITLE___</p>
-                        <p class="subhead">___TEASER___ <i class="fa fa-caret-right"></i></p>
+                        <!-- <p class="headline">___TITLE___</p> -->
+                        <p class="subhead">Be a part of the excitement. Volunteer for Solar Decathlon 2015 today! <i class="fa fa-caret-right"></i></p>
                     </div>
                 </a>
             </div>
@@ -51,7 +51,7 @@
         <div class="carousel-indicators">
             <a class="fogbox active">
                 <div>
-                    <img src="//placehold.it/277x110"
+                    <img src="assets/images/feature-teams.jpg"
                         class="img-responsive"
                         alt=""
                         data-target="#carousel"
@@ -62,7 +62,7 @@
             </a>
             <a class="fogbox">
                 <div>
-                    <img src="//placehold.it/277x110"
+                    <img src="assets/images/feature-sunrise.jpg"
                         class="img-responsive"
                         alt=""
                         data-target="#carousel"
@@ -73,7 +73,7 @@
             </a>
             <a class="fogbox">
                 <div>
-                    <img src="//placehold.it/277x110"
+                    <img src="assets/images/feature-volunteer.jpg"
                         class="img-responsive"
                         alt=""
                         data-target="#carousel"
@@ -108,6 +108,7 @@
 
 </div>
 <!-- END CAROUSEL -->
+
 
 
 
