Ultraseek stopindex tags on banner/topnav

--- a/client/template/global-banner-topnav.html
+++ b/client/template/global-banner-topnav.html
@@ -1,4 +1,6 @@
 
+<!--stopindex-->
+
 <!-- == GLOBAL TOPNAV/BANNER == -->
 <a href="#content" class="sr-only">Skip to main content</a>
 
@@ -99,3 +101,5 @@
     </div>
 </div>
 <!-- == END GLOBAL TOPNAV/BANNER == -->
+
+<!--startindex-->
