--- a/client/template/global-footer.html
+++ b/client/template/global-footer.html
@@ -23,8 +23,30 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-2 col-sm-offset-5 col-xs-6 col-xs-offset-3">
-                <a href="http://www.nrel.gov"><img src="/client/img/nrel-logo.png" alt="NREL" class="img-responsive logo"></a>
+
+            <div class="footer-sponsors-global">
+                <div class="col-sm-2 col-sm-offset-5 col-xs-6 col-xs-offset-3">
+                    <a href="http://www.nrel.gov"><img src="/client/img/nrel-logo.png" alt="NREL" class="img-responsive logo"></a>
+                </div>
+            </div>
+
+            <div class="footer-sponsors-2015 hide">
+
+                <div class="row">
+                    <div class="col-sm-2 col-sm-offset-2">
+                        <img src="/client/img/nrel-logo.png" alt="NREL" class="img-responsive logo">
+                    </div>
+                    <div class="col-sm-2">
+                        <img src="assets/images/sponsor-footer-edison.png" alt="Edison International" class="img-responsive logo">
+                    </div>
+                    <div class="col-sm-2">
+                        <img src="assets/images/sponsor-footer-schneider.png" alt="Schneider Electric" class="img-responsive logo">
+                    </div>
+                    <div class="col-sm-1">
+                        <img src="assets/images/sponsor-footer-wells-fargo.png" alt="Wells Fargo" class="img-responsive logo ">
+                    </div>
+                </div>
+
             </div>
         </div>
 
