meta description tag

--- a/client/template/global-head.html
+++ b/client/template/global-head.html
@@ -2,7 +2,7 @@
 
     <!-- SEO -->
     <meta name="keywords" content="solar decathlon solar decathalon" >
-
+    <meta name="description" content="The U.S. Department of Energy Solar Decathlon challenges 20 collegiate teams to design, build, and operate solar-powered houses that are cost-effective, energy-efficient, and attractive. The winner of the competition is the team that best blends affordability, consumer appeal, and design excellence with optimal energy production and maximum efficiency.">
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" >
